[package]
name = "luftpost"
version = "0.0.1"
authors = ["Lukas Pustina <lukas@pustina.net>"]

description = "Watches luftdaten.info particulates sensors and sends E-Mails if measurements exceed thresholds"
repository = "https://github.com/lukaspustina/luftpost"
readme = "README.md"
license = "MIT"
keywords = ["luftdaten", "E-Mail"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]

[badges]
travis-ci = { repository = "lukaspustina/luftdaten", branch = "master" }
appveyor = { repository = "lukaspustina/luftdaten", branch = "master" }

[[bin]]
name = "luftpost"
path = "src/main.rs"

[dependencies]
clap = "2"
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
lettre = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tabwriter = "1.0"
tokio-core = "0.1"
toml = "0.4"

[dev-dependencies]
pretty_assertions = "0.1"
